--- a/src/HAX506X_Probabilites/assets/tikz/02_figure_cours3_conv.tex
+++ b/src/HAX506X_Probabilites/assets/tikz/02_figure_cours3_conv.tex
@@ -8,15 +8,18 @@
         \node (c1) at (-3, 2) {convergence\\presque sûre};
         \node (c2) at (3, 2) {convergence\\sur $\mathcal{L}^p$};
         \node (c3) at (0, -2.5) {convergence\\en probabilité};
+        \node (c4) at (0, -7) {convergence\\en loi};
         
         % Draw bigger circles around the centers
         \draw (c1) circle (1.5);
         \draw (c2) circle (1.5);
         \draw (c3) circle (1.5);
+        \draw (c4) circle (1.5);
         
         % Red implication arrows (double lined) from top to bottom - now straight
         \draw[-implies, double equal sign distance, red] (-2, 0.8) -- (-0.8, -1.2);
         \draw[-implies, double equal sign distance, red] (2, 0.8) -- (0.8, -1.2);
+        \draw[-implies, double equal sign distance, red] (0, -4) -- (0, -5.5);
         
         % Blue curved arrows between sets
         \draw[<-, blue] (-1.8, 1) to[bend right=20] node[above] {extraction} (1.8, 1);
@@ -28,5 +31,8 @@
         \draw[->, blue] (-1.5, -2.5) to[bend left=40] node[left] {extraction} (-3, 0.5);
         
         \draw[->, blue] (1.5, -2.5) to[bend right=40] node[right] {hypothèse\\de moment} (3, 0.5);
+
+        % bottom bottom to middle bottom with right curved arrow
+        \draw[->, blue] (1.3, -6.2) to[bend right=40] node[right] {si cv vers\\constante} (1.3, -3.2);
     \end{tikzpicture}
 \end{center}
