--- a/src/HAX506X_Probabilites/tds/td_main.tex
+++ b/src/HAX506X_Probabilites/tds/td_main.tex
@@ -70,4 +70,11 @@
     \setcounter{section}{8}
     \setcounter{tdcounter}{0}
     \input{../tds/td_8.tex}
+
+    \newpage
+    \section*{TD9 --- Loi des grands nombres}\label{sec:TD9}
+    \addcontentsline{toc}{section}{\nameref{sec:TD9}}
+    \setcounter{section}{9}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_9.tex}
 \end{document}
