work in progress 506

--- a/src/HAX506X_Probabilites/tds/td_main.tex
+++ b/src/HAX506X_Probabilites/tds/td_main.tex
@@ -77,4 +77,12 @@
     \setcounter{section}{9}
     \setcounter{tdcounter}{0}
     \input{../tds/td_9.tex}
+
+    \newpage
+    \section*{TD10 --- Convergence en loi}\label{sec:TD9}
+    \addcontentsline{toc}{section}{\nameref{sec:TD10}}
+    \setcounter{section}{10}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_10.tex}
+
 \end{document}
