--- a/src/HAX506X_Probabilites/tds/td_10.tex
+++ b/src/HAX506X_Probabilites/tds/td_10.tex
@@ -216,7 +216,7 @@
         \item Déterminer la fonction de répartition de \(M_n\),
         puis celle de \(X_n\).
 
-        \iteù Etudier la convergence en loi de la suite \({(X_n)}_{n\geq 1}\).
+        \item Etudier la convergence en loi de la suite \({(X_n)}_{n\geq 1}\).
     \end{enumerate}
 \end{td-exo}
 
